# backend/routes/api/v1/admin.php
@@ -13,6 +13,7 @@ use App\Http\Controllers\Api\V1\Admin\ProductController;
 use App\Http\Controllers\Api\V1\Admin\ProductExportController;
 use App\Http\Controllers\Api\V1\Admin\ProductGroupController;
 use App\Http\Controllers\Api\V1\Admin\ProductImageController;
+use App\Http\Controllers\Api\V1\Admin\ProductImportController;
 use App\Http\Controllers\Api\V1\Admin\ProductRelationController;
 use App\Http\Controllers\Api\V1\Admin\RoleController;
 use Illuminate\Support\Facades\Route;
@@ -44,6 +45,8 @@ Route::apiResource('attribute-groups', AttributeGroupController::class);
 Route::apiResource('attributes', AttributeController::class);
 Route::apiResource('brands', BrandController::class);
 Route::get('products/export', ProductExportController::class)->name('products.export');
+Route::post('products/import', [ProductImportController::class, 'store'])->name('products.import');
+Route::get('product-imports/{productImport}', [ProductImportController::class, 'show'])->name('product-imports.show');
 Route::apiResource('products', ProductController::class);
 Route::apiResource('product-groups', ProductGroupController::class);
 Route::get('products/{product}/attributes', [ProductAttributeValueController::class, 'index'])->name('products.attributes.index');
